// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popup should render the component 1`] = `
<div
  onMouseUp={[Function]}
>
  <ComposedComponent
    anchor="bottom"
    closePopup={[Function]}
    getRect={[Function]}
    id="testPopup"
    offset={0}
    prop1="prop1_value"
    updatePopupProps={[Function]}
  />
</div>
`;

exports[`popup should render the component with offsets 1`] = `
<div
  onMouseUp={[Function]}
>
  <ComposedComponent
    anchor="bottom"
    closePopup={[Function]}
    getRect={[Function]}
    id="testPopup"
    offset={5}
    prop1="prop1_value"
    updatePopupProps={[Function]}
  />
</div>
`;

exports[`popup should render the component with popup classname 1`] = `
<div
  className="my-class"
  onMouseUp={[Function]}
>
  <ComposedComponent
    anchor="bottom"
    closePopup={[Function]}
    getRect={[Function]}
    id="testPopup"
    offset={0}
    popupClassName="my-class"
    prop1="prop1_value"
    updatePopupProps={[Function]}
  />
</div>
`;

exports[`popup should render the component with provider 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(HigherOrderPopupComponent)
    closePopup={[Function]}
    getRect={[Function]}
    id="testPopup"
    prop1="prop1_value"
    updatePopupProps={[Function]}
  >
    <HigherOrderPopupComponent
      closePopup={[Function]}
      getRect={[Function]}
      id="testPopup"
      prop1="prop1_value"
      updatePopupProps={[Function]}
    />
  </Connect(HigherOrderPopupComponent)>
</Provider>
`;
